Fixed background scrolling issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     body {
         @apply font-['IBM_Plex_Mono'];
         @apply text-[#93B1A6];
+        @apply bg-[#0F0F0F];
     }
     li {
         @apply px-4;
